--- a/views/houses/houses-list.hbs
+++ b/views/houses/houses-list.hbs
@@ -1,15 +1,6 @@
- <h1>  House of {{name}}  </h1>
-
-<br>
-<h3> Description: {{values}} </h3>
-<br>
-<br>
-<br>
-
-
-
-
-<br>
-<button><a href="/houses/update">Update</a></button>
-<hr/>
+<div class="log-div">
+    <div class="house-page">
+        <a href="/dashboard">Go Back To Dashboard</a>
+    </div>
+</div>
 
