--- a/views/tournaments/tournaments-list.hbs
+++ b/views/tournaments/tournaments-list.hbs
@@ -1,7 +1,16 @@
 <div class="log-div">
     <div class="tournament-page">
         <h1>Tournament Placings</h1>
-        <div class="tournament-board"></div>
+        <div class="tournament-board">
+            <div>
+                <img class="players" id="gryffindor" src="/images/gryf.gif"/>
+                <img class="players" id="hufflepuff" src="/images/huf.gif"/>
+            </div>
+            <div>
+                <img class="players" id="ravenclaw" src="/images/rav.gif"/>
+                <img class="players" id="slytherin" src="/images/sly.jpg"/>
+            </div>
+        </div>
         <a href="/dashboard">Dashboard</a>
     </div>
 </div>
