--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,7 +27,7 @@
 
             <a href="/houses/">HOUSE</a>
 
-            <a href="/halls">HALLs</a>
+            <a href="/halls">HALLS</a>
 
             
             <p>Welcome {{loggedInUser}}!</p>
