--- a/views/match/match-win.hbs
+++ b/views/match/match-win.hbs
@@ -1,7 +1,8 @@
 <div class="log-div win-div-img">
     <div class="sorting-page">
         <form action="/match/match-win" method="POST">
-              <p>Your pupils are elated with their performance</p>
+             
+              <div class="test2"><h2 class="black-text">Your pupils are elated with their performance</h2></div>
               <button type="submit">Celebrate</button>
         </form>
     </div>
