--- a/views/halls/halls-landing.hbs
+++ b/views/halls/halls-landing.hbs
@@ -9,7 +9,7 @@
             <a href="/tournaments">Tournament</a>
             <a href="/students/team">Team</a>
             <a href="/students">Students</a>
-            <a href="/match">Witch</a>
+            <a href="/match">Match</a>
         </div>
     </div>
 </div>
