second to final commit

--- a/views/halls/halls-landing.hbs
+++ b/views/halls/halls-landing.hbs
@@ -10,6 +10,7 @@
             <a href="/students/team">Team</a>
             <a href="/students">Students</a>
             <a href="/match">Match</a>
+            <a href="/create-spell">...</a>
         </div>
     </div>
 </div>
