--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -387,6 +387,20 @@ h1 {
   background-position-y: 40px;
 }
 
+.golden-div-img {
+  background-image: url("/images/golden.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 40px;
+}
+
+.phase-div-img {
+  background-image: url("/public/images/intermidiate.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 40px;
+}
+
 /* modifiers*/ 
 
 .dark-div-img {
