--- a/views/houses/houses-list.hbs
+++ b/views/houses/houses-list.hbs
@@ -1,6 +1,8 @@
 <div class="log-div">
     <div class="house-page">
-        <a href="/dashboard">Go Back To Dashboard</a>
+        <h1>House of {{name}}</h1>
+        <h2>{{values}}</h2>
+        <a href="/halls">Go Back To Dashboard</a>
     </div>
 </div>
 
