--- a/views/match/match-eliminated.hbs
+++ b/views/match/match-eliminated.hbs
@@ -1,10 +1,10 @@
 <div class="log-div elimination-div-img">
     <div class="sorting-page">
-        <p>It seems that this year's divinations were not in your favour.</p>
-        <p>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </p>
-        <p>you fostered a great team enviroment for the member of your house</p>
+        <h2>It seems that this year's divinations were not in your favour.</h2>
+        <h4>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </h4>
+        <h4>you fostered a great team enviroment for the member of your house</h4>
         <form action="/finish" method="POST">
-             <button type="submit">Farewell Hogwarts</button>
+             <button class="celebrate-button" type="submit">Farewell Hogwarts</button>
          </form>
     </div>
 </div>
