--- a/views/match/match-lose.hbs
+++ b/views/match/match-lose.hbs
@@ -1,11 +1,11 @@
 <div class="log-div lose-div-img">
     <div class="sorting-page">
-        <p>It seems that this year's divinations were not in your favour.</p>
-        <p>Though you did not achieve the accolades of winning the Hogwarts quidditch cup, </p>
-        <p>you fostered a great team enviroment for the member of your house</p>
+        <h2>It seems that this year's divinations were not in your favour.</h2>
+        <h4>Though you did not achieve the accolades of winning the Hogwarts quidditch cup,</h4>
+        <h4>you fostered a great team enviroment for the member of your house</h4>
         <form action="/match/match-lose" method="POST">
-            <p>Though your pupils gave it there all they were just short of securing victory</p>
-            <button type="submit">Live to play for another day</button>
+            <h6>Though your pupils gave it there all they were just short of securing victory</h6>
+            <button class="celebrate-button" type="submit">Live to play for another day</button>
         </form>
     </div>
 </div>
