--- a/views/match/match-win.hbs
+++ b/views/match/match-win.hbs
@@ -3,7 +3,7 @@
         <form action="/match/match-win" method="POST">
              
               <div class="test2"><h2 class="black-text">Your pupils are elated with their performance</h2></div>
-              <button type="submit">Celebrate</button>
+              <button class="celebrate-button" type="submit">Celebrate</button>
         </form>
     </div>
 </div>
