--- a/views/match/match.hbs
+++ b/views/match/match.hbs
@@ -1,8 +1,8 @@
 <div class="log-div match-div-img">
     <div class="sorting-page">
         <form action="/match" method="POST">
-            <p>Time to prove yourself</p>
-            <button type="submit">Play</button>
+            <h2>Time to prove yourself</h2>
+            <button class="celebrate-button" type="submit">Play</button>
         </form>
     </div>
 </div>
