--- a/views/tournaments/tournaments-list.hbs
+++ b/views/tournaments/tournaments-list.hbs
@@ -3,14 +3,16 @@
         <h1>Tournament Placings</h1>
         <div class="tournament-board">
             <div>
+                <h2>Victories: {{victories}}</h2>
                 <img class="players" id="gryffindor" src="/images/gryf.gif"/>
                 <img class="players" id="hufflepuff" src="/images/huf.gif"/>
             </div>
             <div>
+                <h2>Losses: {{losses}}</h2>
                 <img class="players" id="ravenclaw" src="/images/rav.gif"/>
                 <img class="players" id="slytherin" src="/images/sly.jpg"/>
             </div>
         </div>
-        <a href="/dashboard">Dashboard</a>
+        <a href="/halls">Dashboard</a>
     </div>
 </div>
