--- a/views/match/match-alchemy.hbs
+++ b/views/match/match-alchemy.hbs
@@ -1,8 +1,8 @@
 <div class="log-div alchemy-div-img">
     <div class="sorting-page">
         <form action="/match/match-alchemy" method="POST">
-            <p>Brave forth with tenaity capable of breaking the most wicked of hexes</p>
-            <button type="submit">Play</button>
+            <h2>Brave forth with tenaity capable of breaking the most wicked of hexes</h2>
+            <button class="celebrate-button" type="submit">Play</button>
         </form>
     </div>
 </div>
