--- a/views/match/match-golden.hbs
+++ b/views/match/match-golden.hbs
@@ -2,7 +2,7 @@
     <div class="sorting-page"><div class="student-card">
         <form action="/match/match-dark" method="POST">
              <p>You have captured the golden snitch!</p>
-            <button><a href="/match/match-win">Victory!</a></button>
+            <a href="/match/match-win">Victory!</a>
         </form></div>
     </div>
 </div>
